image folder added

--- a/index.html
+++ b/index.html
@@ -7,11 +7,21 @@
 
     <!-- Linking the css and javascript -->
     <link rel="stylesheet" href="style.css">
+    <link href="http://fonts.cdnfonts.com/css/games" rel="stylesheet">
     <script defer src="script.js"></script>
 
     <title>Game</title>
 </head>
+
+
 <body>
-    <h1>hi </h1>
+        <div class="div-title">
+            <p id="p-game-title">The SnowMan Game</p >
+        </div>
+        
+
+
 </body>
+
+
 </html>
