--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Creepster&family=Press+Start+2P&display=swap" rel="stylesheet">
     <script defer src="script.js"></script>
 
-    <title>Game</title>
+    <title>Scarecrow Game</title>
 </head>
+<!-- <embed src="/music/Day6-You-Make-Me.mp3" loop="true" autostart="true" width="2" height="0"> -->
 
-
-<body>
+    
+    
+    <body>
 
     <div id="p-game-title">
         <p>The Scarecrow Game</p >
@@ -90,6 +92,25 @@
     </div>
 
 </div>
+
+
+<!-- Moodel Box to restart the game: -->
+<!-- Trigger/Open The Modal -->
+<!-- <button id="myBtn">Open Modal</button> -->
+
+<!-- The Modal -->
+<div id="myModal" class="modal">
+
+  <!-- Modal content -->
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <p id="model-msg"></p>
+    <button id="restart">Play Again</button>
+  </div>
+
+</div>
+
+
 
 </body>
 
