adjuctments to styling

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
   <div class="modal-content">
     <span class="close">&times;</span>
     <p id="model-msg"></p>
-    <button id="restart">Play Again</button>
+    <button id="restart">Play Again?</button>
   </div>
 
 </div>
