--- a/index.html
+++ b/index.html
@@ -92,7 +92,24 @@
 <!-- Trigger/Open The Modal -->
 <!-- <button id="myBtn">Open Modal</button> -->
 
-<!-- The Modal -->
+<!-- The Modal Start Game:-->
+
+<div id="myModalInst" class="modalInst">
+
+    <!-- Modal content -->
+    <div class="modal-content-inst" >
+      <span class="close">&times;</span>
+      <p class="model-msg-inst">Welcome to the Scarecrow game! </p>
+      <p class="model-msg-inst1">Game Instructions: </p>
+      <p class="model-msg-inst1">Guess the Halloween related word by choosing a letter from screen.</p>
+      <p class="model-msg-inst1">You have only 8 chances to guess! <br><br><br> Good luck!!</p>
+      <p class="model-msg-inst2">TW: Jumpscare when u lose...</p>
+    </div>
+  
+  </div>
+
+
+<!-- The Modal Start Lose/Win:-->
 <div id="myModal" class="modal">
 
   <!-- Modal content -->
